login navbar responsive

--- a/datenschutz_login.html
+++ b/datenschutz_login.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/login_navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -90,16 +91,25 @@
     <section class="mobile-nav-section">
 
         <section class="mobile-navBar">
-            <a href="./index.html" class="mobileNavLogin"><button class="mobile_nav_btn nav_summary"><span><img
-                            src="./assets/img/loginprivacy.png" alt="">Log In</span></button></a>
+            <a href="./index.html" class="mobileNavLogin">
+                <button class="mobile_nav_btn nav_summary">
+                    <span><img src="./assets/img/loginprivacy.png" alt="">Log In</span>
+                </button>
+            </a>
 
-            <a class="active" href="./datenschutz_login.html"><button class="mobile_nav_btn nav_board active"
-                    disabled><span>Privacy
-                        Policy</span></button></a>
+            <div class="navbar-right">
+                <a class="active" href="./datenschutz_login.html">
+                    <button class="mobile_nav_btn nav_board active"disabled>
+                        <span>Privacy Policy</span>
+                    </button>
+                </a>
 
-            <a href="./legal_notice_login.html"><button class="mobile_nav_btn nav_contacts"><span>Legal
-                        Notice</span></button></a>
-
+                <a href="./legal_notice_login.html">
+                    <button class="mobile_nav_btn nav_contacts">
+                        <span>Legal Notice</span>
+                    </button>
+                </a>
+            </div>
         </section>
     </section>
 
