--- a/legal_notice_login.html
+++ b/legal_notice_login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/standard.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/legal-notice.css">
+    <link rel="stylesheet" href="./styles/login_navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -176,16 +177,25 @@
     <section class="mobile-nav-section">
 
         <section class="mobile-navBar">
-            <a href="./index.html" class="mobileNavLogin"><button class="mobile_nav_btn nav_summary"><span><img
-                            src="./assets/img/loginprivacy.png" alt="">Log In</span></button></a>
+            <a href="./index.html" class="mobileNavLogin">
+                <button class="mobile_nav_btn nav_summary">
+                    <span><img src="./assets/img/loginprivacy.png" alt="">Log In</span>
+                </button>
+            </a>
+            
+            <div class="navbar-right">
+                <a  href="./datenschutz_login.html">
+                    <button class="mobile_nav_btn nav_board ">
+                        <span>Privacy Policy</span>
+                    </button>
+                </a>
 
-            <a href="./datenschutz_login.html"><button class="mobile_nav_btn nav_board"><span>Privacy
-                        Policy</span></button></a>
-
-            <a class="active" href=" ./legal_notice_login.html"><button class=" mobile_nav_btn nav_contacts active"
-                    disabled><span>Legal
-                        Notice</span></button></a>
-
+                <a class="active" href="./legal_notice_login.html">
+                    <button class="mobile_nav_btn nav_contacts active" disabled>
+                        <span>Legal Notice</span>
+                    </button>
+                </a>
+            </div>
         </section>
     </section>
 
