header width and aligne letterdivider

--- a/contacts.html
+++ b/contacts.html
@@ -68,22 +68,24 @@
         <div class="content-wrapper">
 
             <div class="header">
-                <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
-                <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
-                            class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
-                    <div style="position: relative;">
-                        <div onclick="toggleMenu()" class="user-icon" id="userIcon"></div>
-                        <section class="menu">
-                            <div class="menu-btns">
-                                <a href="./hilfe.html" class="menu-item help-link">Help</a>
-                                <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
-                                <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
-                                <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
-                            </div>
+                <div class="header-width">
+                    <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
+                    <p>Kanban Project Management Tool</p>
+                    <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
+                                class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
+                        <div style="position: relative;">
+                            <div onclick="toggleMenu()" class="user-icon" id="userIcon"></div>
+                            <section class="menu">
+                                <div class="menu-btns">
+                                    <a href="./hilfe.html" class="menu-item help-link">Help</a>
+                                    <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
+                                    <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
+                                    <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
+                                </div>
 
-                        </section>
+                            </section>
 
+                        </div>
                     </div>
                 </div>
             </div>
