--- a/board.html
+++ b/board.html
@@ -75,22 +75,24 @@
         <div class="content-wrapper">
 
             <div class="header">
-                <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
-                <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
-                            class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
-                    <div style="position: relative;">
-                        <div onclick="toggleMenu()" class="user-icon" id="userIcon"></div>
-                        <section class="menu">
-                            <div class="menu-btns">
-                                <a href="./hilfe.html" class="menu-item help-link">Help</a>
-                                <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
-                                <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
-                                <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
-                            </div>
+                <div class="header-width">
+                    <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
+                    <p>Kanban Project Management Tool</p>
+                    <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
+                                class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
+                        <div style="position: relative;">
+                            <div onclick="toggleMenu()" class="user-icon" id="userIcon"></div>
+                            <section class="menu">
+                                <div class="menu-btns">
+                                    <a href="./hilfe.html" class="menu-item help-link">Help</a>
+                                    <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
+                                    <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
+                                    <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
+                                </div>
 
-                        </section>
+                            </section>
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,7 +121,8 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>To-Do</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields();" class="add-to-do btn-title">
+                            <button onclick="renderTaskOverlayContent(); validateInputFields();"
+                                class="add-to-do btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5 1.5V9.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
