create task directly into chosen board field

--- a/board.html
+++ b/board.html
@@ -111,7 +111,7 @@
                                 <input class="find-task-input" id="findTaskInput" type="text" placeholder="Find Task">
                                 <button class="search-btn"><img src="./assets/img/search.png" alt=""></button>
                             </form>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()" id="addTask"
+                            <button onclick="renderTaskOverlayContent('toDo'); validateInputFields()" id="addTask"
                                 class="add-task">Add Task <img src="./assets/img/add.png" alt=""></button>
                         </div>
                     </div>
