close drag menu

--- a/board.html
+++ b/board.html
@@ -34,7 +34,7 @@
 
 <body onresize="resizeAndPositionOverlay()" onload="boardInit()">
 
-    <div class="content-width">
+    <div onclick="closeDragMenu(event)" class="content-width">
 
         <div class="content_left">
             <div class="logo-and-navbar-wrapper">
