--- a/board.html
+++ b/board.html
@@ -13,6 +13,7 @@
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js"></script>
     <script src="./scripts/task_card_overlay_script.js"></script>
     <script src="./scripts/task_card_overlay_template.js"></script>
+    <script src="./scripts/responsive_drag.js"></script>
     <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
     <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.svg">
     <title>Join</title>
@@ -102,7 +103,8 @@
                     <div class="board-header-title">
                         <div class="mobile-headline-wrapper">
                             <h2>Board</h2>
-                            <div onclick="renderTaskOverlayContent(); validateInputFields();" class="add-task-mobile-btn">
+                            <div onclick="renderTaskOverlayContent(); validateInputFields();"
+                                class="add-task-mobile-btn">
                                 <img src="./assets/img/add_task_mobile.png" alt="">
                             </div>
                         </div>
