--- a/add_task.html
+++ b/add_task.html
@@ -200,7 +200,7 @@
                                                 src="./assets/svg/addTasksSvg/arrow_drop_down.svg" alt="Icon"
                                                 class="input-icon-category">
                                         </div>
-                                        <section id="category-dropdown" class="category-dropdown">
+                                        <section id="category-dropdown" class="category-dropdown d-none">
                                             <div onclick="setCategory(technicalTask)"
                                                 class="technicalTask-btn category-btn ">
                                                 <p>Technical Task</p>
