dropdown category fixes

--- a/add_task.html
+++ b/add_task.html
@@ -217,12 +217,17 @@
                                             <p>Subtasks</p>
                                         </label>
                                         <div class="addTask-sectio subtask-section">
-                                            <input onclick="cancelEditSubtaskItem();" class="add-task-input-field padding-right-68px" type="text" placeholder="Add new subtask">
-                                            <img class="subtask-add" src="./assets/img/addTask/add.svg" alt="" onclick="focusSubtaskInput()">
+                                            <input onclick="cancelEditSubtaskItem();"
+                                                class="add-task-input-field padding-right-68px" type="text"
+                                                placeholder="Add new subtask">
+                                            <img class="subtask-add" src="./assets/img/addTask/add.svg" alt=""
+                                                onclick="focusSubtaskInput()">
 
                                             <div class="cancel-check-btn">
-                                                <img class="subtask-cancel" onclick="cancelSubInput()" src="./assets/img/addTask/cross.svg"alt="">
-                                                <img class="subtask-check" src="./assets/img/addTask/check.svg" alt="" onclick="renderSubtaskList()">
+                                                <img class="subtask-cancel" onclick="cancelSubInput()"
+                                                    src="./assets/img/addTask/cross.svg" alt="">
+                                                <img class="subtask-check" src="./assets/img/addTask/check.svg" alt=""
+                                                    onclick="renderSubtaskList()">
                                             </div>
                                         </div>
 
@@ -245,11 +250,11 @@
 
                                         </section>
 
-                                            
+
 
                                     </div>
 
-                                    
+
 
 
 
