subtask bug fixes

--- a/add_task.html
+++ b/add_task.html
@@ -24,6 +24,7 @@
     <script src="./scripts/AddTaskScripts/subtasks.js"></script>
     <script src="./scripts/AddTaskScripts/subtasks_template.js"></script>
     <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
+    <script src="./scripts/task_card_overlay_script.js"></script>
 </head>
 
 
@@ -240,7 +241,7 @@
 
                                         <section id="edit-subtask-item-field" class="edit-subtask-item">
                                             <input id="subtask-edit-input" class="subtask-edit-input" value=""
-                                                type="text" name="" id="" maxlength="30">
+                                                type="text" name="" id="">
                                             <div class="edit-subtask-btns"><img onclick="deleteSubInputValue()"
                                                     src="./assets/svg/contacts_svg/delete.svg" alt=""><img
                                                     onclick="confirmSubEdit()" src="./assets/img/addTask/check.svg"
