toggle arrow icon with dropdown display block or none at board overlay

--- a/board.html
+++ b/board.html
@@ -183,7 +183,7 @@
     <div id="addTaskOverlay" class="add-task-overlay d-none" onclick="closeOverlayOutside(event)">
 
     </div>
-    <div id="addTaskOverlayContent" class="add-task-overlay-content">
+    <div onclick="closeCategoryDropdown(event)" id="addTaskOverlayContent" class="add-task-overlay-content">
         <!-- <div class="addTask-header-and-input">
             <div class="addTask-header">
                 <h1>Add Task</h1>
