legal notice big

--- a/datenschutz_login.html
+++ b/datenschutz_login.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="./datenschutz_login.html">Privacy Policy</a>
                 </div>
                 <div class="judicial-links-container ">
-                    <a class="nav-link" href="./legal_notice_login.html">legal notice</a>
+                    <a class="nav-link" href="./legal_notice_login.html">Legal Notice</a>
                 </div>
 
             </div>
@@ -99,7 +99,7 @@
 
             <div class="navbar-right">
                 <a class="active" href="./datenschutz_login.html">
-                    <button class="mobile_nav_btn nav_board active"disabled>
+                    <button class="mobile_nav_btn nav_board active" disabled>
                         <span>Privacy Policy</span>
                     </button>
                 </a>
