--- a/legal_notice_login.html
+++ b/legal_notice_login.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="./datenschutz_login.html">Privacy Policy</a>
                 </div>
                 <div class="judicial-links-container active">
-                    <a class="nav-link" href="./legal_notice_login.html">legal notice</a>
+                    <a class="nav-link" href="./legal_notice_login.html">Legal Notice</a>
                 </div>
 
             </div>
@@ -182,9 +182,9 @@
                     <span><img src="./assets/img/loginprivacy.png" alt="">Log In</span>
                 </button>
             </a>
-            
+
             <div class="navbar-right">
-                <a  href="./datenschutz_login.html">
+                <a href="./datenschutz_login.html">
                     <button class="mobile_nav_btn nav_board ">
                         <span>Privacy Policy</span>
                     </button>
