linked signup validation js

--- a/sign_up.html
+++ b/sign_up.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/signup.css">
     <script src="./scripts/script.js"></script>
     <script defer src="./scripts/signup.js"></script>
+    <script defer src="./scripts/signup_validation.js"></script>
     <script defer src="./scripts/priv_pol_template.js"></script>
     <title>Join Sign Up</title>
 </head>
