--- a/legal_notice.html
+++ b/legal_notice.html
@@ -48,7 +48,7 @@
                     <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
                 </div>
                 <div class="judicial-links-container active">
-                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                    <a class="nav-link" href="./legal_notice.html">Legal notice</a>
                 </div>
 
             </div>
