--- a/hilfe.html
+++ b/hilfe.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
                 </div>
                 <div class="judicial-links-container">
-                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                    <a class="nav-link" href="./legal_notice.html">Legal notice</a>
                 </div>
 
             </div>
