added responsive space

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -92,8 +92,9 @@
                     <p>This privacy policy may be updated at any time. Changes become effective upon
                         publication on the website.</p>
 
-                    <p>Last updated: March 2025</p>
+                    <p class="space-bottom">Last updated: March 2025</p>
                 </div>
+                <div class="responsive-space"></div>
             </div>
         </div>
     </div>
