--- a/legal_notice.html
+++ b/legal_notice.html
@@ -176,7 +176,9 @@
                     </div>
                 </div>
             </div>
+            <div class="responsive-space"></div>
         </div>
+
     </div>
 
     <section class="mobile-nav-section">
